assets and partial better

--- a/app/assets/mpf/styles/education_responsive.css
+++ b/app/assets/mpf/styles/education_responsive.css
@@ -60,7 +60,8 @@
 	}
 	.main_title
 	{
-		font-size: 72px;
+	font-size: 25px;
+		/* font-size: 72px; */
 	}
 }
 
@@ -318,7 +319,9 @@
 	}
 	.main_title_container
 	{
-		height: 153px;
+		width: 100%;
+    height: 97px;
+    padding: 5% 0;
 	}
 	.main_title
 	{
