--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header class="header">
     <div class="header_content d-flex flex-row align-items-center justify-content-start">
-        <div class="logo">Smith<span>.</span>CV</div>
+        <div class="logo">Linx<span>.</span>CV</div>
         <div class="main_nav d-flex flex-row align-items-end justify-content-start">
             <ul class="d-flex flex-row align-items-center justify-content-start">
                 <li  <% if action_name=="about" %>class="active"<% end %> <% if action_name=="" %>class="active"<% end %>><a data-method="GET" href="/home/about">About</a></li>
