--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,6 @@
+<% content_for :foot do %>
+    <script src="/assets/js/custom.js"></script>
+<% end %>
 <div class="super_container">
     <div class="content_container">
         <div class="main_content_outer d-flex flex-xl-row flex-column align-items-start justify-content-start">
@@ -6,7 +9,7 @@
             <div class="main_content">
                 <div class="main_title_container d-flex flex-column align-items-start justify-content-end">
                     <div class="main_subtitle">HTML5 & CSS Developer</div>
-                    <div class="main_title">Jeremy Smith</div>
+                    <div class="main_title">A.N.Tsimanarson Princy</div>
                 </div>
                 <div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
                     <div class="about_content">
