--- a/app/assets/mpf/styles/contact.css
+++ b/app/assets/mpf/styles/contact.css
@@ -630,7 +630,8 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 183px;
+    height: 97px;
+    padding: 5% 0;
 }
 .main_subtitle
 {
@@ -641,7 +642,8 @@ section
 }
 .main_title
 {
-	font-size: 72px;
+	font-size: 25px;
+	/* font-size: 72px; */
 	font-weight: 800;
 	color: #100f3a;
 	line-height: 0.75;
@@ -650,10 +652,10 @@ section
 }
 .main_content_scroll
 {
-	width: 100%;
-	padding-right: 76px;
-	margin-top: 64px;
-	max-height: calc(100% - 183px - 64px);
+	/* margin-top: 72px; */
+    /* max-height: calc(100% - 193px - 72px - 30px); */
+    padding-right: 60px;
+    height: 75%;
 }
 .mCS-minimal.mCSB_scrollTools .mCSB_draggerRail, .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail
 {
