--- a/app/assets/mpf/styles/contact_responsive.css
+++ b/app/assets/mpf/styles/contact_responsive.css
@@ -69,7 +69,8 @@
 	}
 	.main_title
 	{
-		font-size: 72px;
+	font-size: 25px;
+		/* font-size: 72px; */
 	}
 	.main_content_scroll
 	{
@@ -347,7 +348,9 @@
 	}
 	.main_title_container
 	{
-		height: 153px;
+		width: 100%;
+    height: 97px;
+    padding: 5% 0;
 	}
 	.main_title
 	{
