--- a/app/assets/mpf/styles/portfolio.css
+++ b/app/assets/mpf/styles/portfolio.css
@@ -519,7 +519,8 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 183px;
+    height: 97px;
+    padding: 5% 0;
 }
 .main_subtitle
 {
@@ -530,7 +531,8 @@ section
 }
 .main_title
 {
-	font-size: 72px;
+	font-size: 25px;
+	/* font-size: 72px; */
 	font-weight: 800;
 	color: #100f3a;
 	line-height: 0.75;
@@ -539,8 +541,10 @@ section
 }
 .main_content_scroll
 {
-	margin-top: 62px;
-	max-height: calc(100% - 183px - 93px - 62px);
+	/* margin-top: 72px; */
+    /* max-height: calc(100% - 193px - 72px - 30px); */
+    padding-right: 60px;
+    height: 75%;
 }
 .mCS-minimal.mCSB_scrollTools .mCSB_draggerRail, .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail
 {
