--- a/app/assets/mpf/styles/responsive.css
+++ b/app/assets/mpf/styles/responsive.css
@@ -65,7 +65,7 @@
 	}
 	.main_title
 	{
-		font-size: 72px;
+		font-size: 25px;
 	}
 }
 
@@ -300,7 +300,9 @@
 	}
 	.main_title_container
 	{
-		height: 153px;
+		width: 100%;
+    height: 97px;
+    padding: 5% 0;
 	}
 	.main_title
 	{
