--- a/app/assets/mpf/styles/services_responsive.css
+++ b/app/assets/mpf/styles/services_responsive.css
@@ -64,7 +64,8 @@
 	}
 	.main_title
 	{
-		font-size: 72px;
+	font-size: 25px;
+		/* font-size: 72px; */
 	}
 }
 
@@ -311,7 +312,9 @@
 	}
 	.main_title_container
 	{
-		height: 153px;
+		width: 100%;
+    height: 97px;
+    padding: 5% 0;
 	}
 	.main_title
 	{
