--- a/app/assets/mpf/styles/skills.css
+++ b/app/assets/mpf/styles/skills.css
@@ -631,7 +631,8 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 183px;
+    height: 97px;
+    padding: 5% 0;
 }
 .main_subtitle
 {
@@ -642,7 +643,7 @@ section
 }
 .main_title
 {
-	font-size: 72px;
+	font-size: 25px;
 	font-weight: 800;
 	color: #100f3a;
 	line-height: 0.75;
@@ -651,9 +652,10 @@ section
 }
 .main_content_scroll
 {
-	margin-top: 85px;
-	max-height: calc(100% - 193px - 72px - 30px);
-	padding-right: 60px;
+	/* margin-top: 72px; */
+    /* max-height: calc(100% - 193px - 72px - 30px); */
+    padding-right: 60px;
+    height: 75%;
 }
 .mCS-minimal.mCSB_scrollTools .mCSB_draggerRail, .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail
 {
