--- a/app/assets/mpf/styles/testimonials.css
+++ b/app/assets/mpf/styles/testimonials.css
@@ -630,7 +630,8 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 183px;
+    height: 97px;
+    padding: 5% 0;
 }
 .main_subtitle
 {
@@ -641,7 +642,7 @@ section
 }
 .main_title
 {
-	font-size: 72px;
+	font-size: 25px;
 	font-weight: 800;
 	color: #100f3a;
 	line-height: 0.75;
@@ -650,12 +651,10 @@ section
 }
 .main_content_scroll
 {
-	width: calc(100% + 60px);
-	left: -60px;
-	padding-left: 30px;
-	padding-right: 76px;
-	margin-top: 101px;
-	max-height: calc(100% - 183px - 102px);
+	/* margin-top: 72px; */
+    /* max-height: calc(100% - 193px - 72px - 30px); */
+    padding-right: 60px;
+    height: 75%;
 }
 .mCS-minimal.mCSB_scrollTools .mCSB_draggerRail, .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail
 {
