--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -1,3 +1,10 @@
+<% content_for :head do %>
+	<link rel="stylesheet" type="text/css" href="/assets/styles/experience.css">
+	<link rel="stylesheet" type="text/css" href="/assets/styles/experience_responsive.css">
+<% end %>
+<% content_for :foot do %>
+	<script src="/assets/js/experience.js"></script>
+<% end %>
 <div class="super_container">
 
 	<div class="content_container">
