--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -1,3 +1,10 @@
+<% content_for :head do %>
+	<link rel="stylesheet" type="text/css" href="/assets/styles/services.css">
+<link rel="stylesheet" type="text/css" href="/assets/styles/services_responsive.css">
+<% end %>
+<% content_for :foot do %>
+	<script src="/assets/js/services.js"></script>
+<% end %>
 <div class="super_container">
 
 	<div class="content_container">
